/*
 * $Id: ChangeLog,v 1.2804 2004/04/19 09:53:14 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-20 12:20 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * source/rtl/tbcolumn.prg
  * source/rtl/tbrowse.prg
    ! Fixed headsep/colsep display, including handling of different tbcolumn's
      headsep/colsep.
    ! Fixed wrong display when ::colPos assigned beyond ::leftVisible or
      ::rightVisible.

    /*
      Notes:
      ::right() and ::left() should skip empty columns (Clipper compatible).
      I guess it is not difficult to fix this, but I don't personally see it
      as a problem. Does anybody?
    */

2004-04-19 13:50 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Fixed numerous problems (breakpoints, STATIC monitoring etc.) with .prg
      modules located in different directories.

2004-04-18 23:05 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/rtl/memoedit.prg
  Reverted back to previus default
      From
         DEFAULT nLineLength     TO nRight - nLeft + 1
      INTO
         DEFAULT nLineLength     TO nRight - nLeft
      By GianCarlo Niccolain request

2004-04-19 03:50 UTC+0200 Giancarlo Niccolai <antispam [at] niccolai/dot/ ws>
  * source/rtl/teditor.prg
    ! Correct sanitization on New() parameters; prevents function looping into memoedit after
      changing the text to crash.
    % More compact and readable (by far) code.

2004-04-18 23:35 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * source/rtl/teditor.prg
    ! More fixes to TEditor.

2004-04-18 21:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Fixed .T./.F. in command window and any dependencies on applications
      SET EXACT setting (mainly borrowed from Ryszard Glab's patch to
      Harbour).
